--- a/index.html
+++ b/index.html
@@ -89,12 +89,35 @@
                         </article>
                     </div>
                 </div>
-             </div>
+                <div class="slider__item">
+                    <div class="inner__slider">
+                        <article class="portfolio">
+                            <h2 class="portfolio__title">Webpack-template</h2>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="" poster="src/pic/puzzle.jpg"></video>
+                                    <p>Webpack однозначно полезный инструмент. Он анализирует модули приложения и
+                                        создает граф зависимостей, затем собирает модули в один или более bundle. Кроме
+                                        того сборщик преобразует некоторые файлы, например Sass - проблемы с настройкой
+                                        позади(!) - в другой формат.</p>
+                                </div>
+                                <div class="portfolio__content">
+                                    <p><a href="https://github.com/MilaNick/Webpack-template" target="_blank"> Базовый
+                                        шаблон </a> был собран на базе пятого webpack-а для работы с проектами, в
+                                        которых используются
+                                        Sass(Scss), Pug, Bootstrap, Jquery, React.</p>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="main-list screen">
         <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект "Игры разума"</a></h3>
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект
+                "Игры разума"</a></h3>
             <span class="item__link"> - набор из пяти консольных игр.</span>
             <p class="item__description">Работа над проектом началась с настройки среды окружения: установлен node.js,
                 прописаны зависимости в npm, для чтения пользовательского ввода подключена
@@ -110,13 +133,26 @@
                 инструментов в арсенале любого разработчика.</p>
         </div>
         <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">Проект "Вычислитель отличий"</a></h3>
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">Проект
+                "Вычислитель отличий"</a></h3>
             <span class="item__link"> между двумя файлами в форматах json, yaml.</span>
             <p class="item__description">В проекте реализована работа с деревьями - обход, преобразование, формирование
-                AST (абстрактного синтаксического дерева). Проект написан в функциональном стиле. В процессе работы пришло
+                AST (абстрактного синтаксического дерева). Проект написан в функциональном стиле. В процессе работы
+                пришло
                 понимание форматов данных json, yaml, ini (структура, изучение синтаксического анализа в js и обратно) В
                 результате создано полноценное приложение CLI с анализом входных параметров, проверкой и созданием
                 справки.</p>
+        </div>
+        <div class="list__item">
+            <h3 class="item__title"><a href="https://github.com/MilaNick/Webpack-template" target="_blank">Webpack-template</a>
+            </h3>
+            <span class="item__link"> Базовый шаблон</span>
+            <p class="item__description">который собран на базе пятого webpack-а для работы с проектами, использующих
+                Sass(Scss), Pug, Bootstrap, Jquery, React.
+                Webpack анализирует модули приложения и создает граф зависимостей, затем собирает модули в один или
+                более bundle. Кроме того сборщик преобразует некоторые файлы, например Sass - проблемы с настройкой
+                позади(!) - в другой формат. </p>
+
         </div>
     </div>
 </div>
