added and optimized images

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h2 class="portfolio__title">Webpack-template</h2>
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
-                                    <video src="" poster="src/pic/puzzle.jpg"></video>
+                                    <video src="" poster="src/pic/webpack.jpg"></video>
                                     <p>Webpack однозначно полезный инструмент. Он анализирует модули приложения и
                                         создает граф зависимостей, затем собирает модули в один или более bundle. Кроме
                                         того сборщик преобразует некоторые файлы, например Sass - проблемы с настройкой
