--- a/index.html
+++ b/index.html
@@ -114,20 +114,20 @@
                 <div class="slider__item">
                     <div class="inner__slider">
                         <article class="portfolio">
-                            <h2 class="portfolio__title">Приложение по созданию, чтению, фильтрации, удалению работников предприятия.</h2>
+                            <h2 class="portfolio__title">Приложение по созданию, чтению, фильтрации, удалению работников
+                                предприятия.</h2>
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
                                     <video src="" poster="src/pic/app.jpg"></video>
-                                    <p>Приложение позволяет в удобном интерфейсе отсортировать работников по
-                                        определенным фильтрам, добавить или удалить нового, повысить зарплату или отправить на
-                                        повышение. Приложение написано на функциональных и классовых компонентах, пока
-                                        без хуков, затем оно будет переписано на хуках, без использования классовых
-                                        компонентов. В приложении использован bootstrap. </p>
+                                    <p>Пришло время React-а: первое ученическое приложение создано и залито на гитхаб.</p>
                                 </div>
                                 <div class="portfolio__content">
-                                    <p><a href="https://milanick.github.io/react-app_1/" target="_blank">App #1</a> Пришло
-                                        время React-а: первое ученическое приложение создано и залито на гитхаб. Оно
-                                        было написано с использованием React, Bootstrap.</p>
+                                    <p><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение №1</a>
+                                        Приложение позволяет в удобном интерфейсе отсортировать работников по
+                                        определенным фильтрам, добавить или удалить нового, повысить зарплату или
+                                        отправить на повышение. Приложение написано на функциональных и классовых
+                                        компонентах, пока без хуков, затем оно будет переписано на хуках, без
+                                        использования классовых компонентов. В приложении использован bootstrap.</p>
                                 </div>
                             </div>
                         </article>
@@ -177,7 +177,7 @@
 
         </div>
         <div class="list__item">
-            <h3 class="item__title"><a href="https://milanick.github.io/react-app_1/" target="_blank">App #1</a>
+            <h3 class="item__title"><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение по созданию, чтению, фильтрации, удалению работников предприятия</a>
             </h3>
             <span class="item__link">Приложение по созданию, чтению, фильтрации, удалению работников предприятия</span>
             <p class="item__description">которое позволяет в удобном формате отсортировать работников по
