--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                         Приложение позволяет в удобном интерфейсе отсортировать работников по
                                         определенным фильтрам, добавить или удалить нового, повысить зарплату или
                                         отправить на повышение. Приложение написано на функциональных и классовых
-                                        компонентах, пока без хуков, затем оно будет переписано на хуках, без
+                                        компонентах, пока без хуков, затем оно будет переписано без
                                         использования классовых компонентов. В приложении использован bootstrap.</p>
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
             <p class="item__description">которое позволяет в удобном формате отсортировать работников по
                 определенным фильтрам, добавить или удалить нового, повысить зарплату или отправить на
                 повышение. Приложение написано на функциональных и классовых компонентах, пока
-                без хуков, затем оно будет переписано на хуках, без использования классовых
+                без хуков, затем оно будет переписано без использования классовых
                 компонентов. В приложении использован bootstrap.</p>
 
         </div>
