--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="list__item">
             <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект
                 "Игры разума"</a></h3>
-            <span class="item__link"> - набор из пяти консольных игр.</span>
+            <span class="item__link">+  - набор из пяти консольных игр.</span>
             <p class="item__description">Работа над проектом началась с настройки среды окружения: установлен node.js,
                 прописаны зависимости в npm, для чтения пользовательского ввода подключена
                 сторонняя библиотека readlineSync. Для удобства работы использован make. Для
@@ -155,9 +155,9 @@
                 инструментов в арсенале любого разработчика.</p>
         </div>
         <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">Проект
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank"> Проект
                 "Вычислитель отличий"</a></h3>
-            <span class="item__link"> между двумя файлами в форматах json, yaml.</span>
+            <span class="item__link"> + между двумя файлами в форматах json, yaml.</span>
             <p class="item__description">В проекте реализована работа с деревьями - обход, преобразование, формирование
                 AST (абстрактного синтаксического дерева). Проект написан в функциональном стиле. В процессе работы
                 пришло
@@ -166,9 +166,9 @@
                 справки.</p>
         </div>
         <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/Webpack-template" target="_blank">Webpack-template</a>
+            <h3 class="item__title"><a href="https://github.com/MilaNick/Webpack-template" target="_blank"> Webpack-template</a>
             </h3>
-            <span class="item__link"> Базовый шаблон</span>
+            <span class="item__link"> + Базовый шаблон</span>
             <p class="item__description">который собран на базе пятого webpack-а для работы с проектами, использующих
                 Sass(Scss), Pug, Bootstrap, Jquery, React.
                 Webpack анализирует модули приложения и создает граф зависимостей, затем собирает модули в один или
@@ -179,7 +179,7 @@
         <div class="list__item">
             <h3 class="item__title"><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение по созданию, чтению, фильтрации, удалению работников предприятия</a>
             </h3>
-            <span class="item__link">Приложение по созданию, чтению, фильтрации, удалению работников предприятия</span>
+            <span class="item__link">+ Приложение №1</span>
             <p class="item__description">которое позволяет в удобном формате отсортировать работников по
                 определенным фильтрам, добавить или удалить нового, повысить зарплату или отправить на
                 повышение. Приложение написано на функциональных и классовых компонентах, пока
