added a description of the new project

--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
                 <div class="slider__item">
                     <div class="inner__slider">
                         <article class="portfolio">
+                            <h2 class="portfolio__title">RSS-агрегатор</h2>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="" poster="src/pic/rss.jpg"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl3" target="_blank">RSS-агрегатор</a>
+                                        для чтения новостей с выбранных сайтов.
+                                    <p>Это третий проект, реализованный при изучении профессии Javascript-разработчика
+                                        на hexlet.io
+                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                </div>
+                                <div class="portfolio__content">
+                                    <p>Проект сфокусирован на работе с чистым DOM, отрабатывалась работа с
+                                        селекторами, событиями и генерацией HTML средствами DOM API. Особое внимание
+                                        уделено формам. Приложение разрабатывалось на основе шаблона проектирования MVC и построено на промисах без
+                                        использования (исключительно в ученических целях) async/await. Для сборки применен Webpack5.
+                                        Для организации текстов и перевода использована библиотека i18next.</p>
+                                    <p>Выполнен деплой приложения на <a href="https://rss-aggregator-gamma.vercel.app/"
+                                                             target="_blank">versel</a>, где можно им воспользоваться</p>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="slider__item">
+                    <div class="inner__slider">
+                        <article class="portfolio">
                             <h2 class="portfolio__title">Webpack-template</h2>
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
@@ -119,10 +145,13 @@
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
                                     <video src="" poster="src/pic/app.jpg"></video>
-                                    <p>Пришло время React-а: первое ученическое приложение создано и залито на гитхаб.</p>
+
                                 </div>
                                 <div class="portfolio__content">
-                                    <p><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение №1</a>
+                                    <p>Пришло время React-а: первое ученическое приложение создано и залито на
+                                        гитхаб.</p>
+                                    <p><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение
+                                        №1</a>
                                         Приложение позволяет в удобном интерфейсе отсортировать работников по
                                         определенным фильтрам, добавить или удалить нового, повысить зарплату или
                                         отправить на повышение. Приложение написано на функциональных и классовых
@@ -140,7 +169,7 @@
         <div class="list__item">
             <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект
                 "Игры разума"</a></h3>
-            <span class="item__link">+  - набор из пяти консольных игр.</span>
+            <span class="item__link">+ набор из пяти консольных игр.</span>
             <p class="item__description">Работа над проектом началась с настройки среды окружения: установлен node.js,
                 прописаны зависимости в npm, для чтения пользовательского ввода подключена
                 сторонняя библиотека readlineSync. Для удобства работы использован make. Для
@@ -166,7 +195,19 @@
                 справки.</p>
         </div>
         <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/Webpack-template" target="_blank"> Webpack-template</a>
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl3" target="_blank">RSS-агрегатор</a>
+            </h3>
+            <span class="item__link">+ для чтения новостей с выбранных сайтов.</span>
+            <p class="item__description">Проект сфокусирован на работе с чистым DOM, отрабатывалась работа с
+                селекторами, событиями и генерацией HTML средствами DOM API. Особое внимание уделено формам. Приложение
+                разрабатывалось на основе шаблона проектирования MVC и построено на промисах без использования
+                (исключительно в ученических целях) async/await. Для сборки применен Webpack5. Для организации текстов и
+                перевода использована библиотека i18next. Выполнен деплой приложения на <a href="https://rss-aggregator-gamma.vercel.app/"
+                                                                                           target="_blank">versel</a>, где можно им воспользоваться. </p>
+        </div>
+        <div class="list__item">
+            <h3 class="item__title"><a href="https://github.com/MilaNick/Webpack-template" target="_blank">
+                Webpack-template</a>
             </h3>
             <span class="item__link"> + Базовый шаблон</span>
             <p class="item__description">который собран на базе пятого webpack-а для работы с проектами, использующих
@@ -177,7 +218,8 @@
 
         </div>
         <div class="list__item">
-            <h3 class="item__title"><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение по созданию, чтению, фильтрации, удалению работников предприятия</a>
+            <h3 class="item__title"><a href="https://milanick.github.io/react-app_1/" target="_blank">Приложение по
+                созданию, чтению, фильтрации, удалению работников предприятия</a>
             </h3>
             <span class="item__link">+ Приложение №1</span>
             <p class="item__description">которое позволяет в удобном формате отсортировать работников по
