--- a/index.html
+++ b/index.html
@@ -26,64 +26,28 @@
                 <div class="slider__item">
                     <div class="inner__slider">
                         <article class="portfolio">
-                            <h2 class="portfolio__title">Проект "Игры разума"</h2>
+                            <h2 class="portfolio__title">Chat</h2>
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
-                                    <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg"
-                                           controls="controls"></video>
-                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
-                                        разума» — набор из пяти консольных игр.</a> Каждая игра
-                                        задает вопросы, на которые нужно дать правильные ответы.</p>
-                                    <p>
-                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
+                                    <video src="" poster="src/pic/chat.jpg"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-12" target="_blank">Чат</a>
+                                        для коммуникации с возможностью создавать, переименовывать, удалять каналы, с
+                                        подсказками и запретом ненормативной лексики
+                                    <p>Это четвертый дипломный проект, реализованный при изучении профессии
+                                        Javascript-разработчика
                                         на hexlet.io
                                         <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
                                 </div>
-
                                 <div class="portfolio__content">
-
-                                    <p>Работа над проектом началась с настройки среды окружения: установлен node.js,
-                                        прописаны зависимости в npm, для чтения пользовательского ввода подключена
-                                        сторонняя
-                                        библиотека readlineSync. Для удобства работы использован make. Для
-                                        автоматического отслеживания качества кода - настроен линтер (Eslint),
-                                        для непрерывной интеграции - подключены сервисы Github Actions и
-                                        CodeClimate.</p>
-                                    <p>В процессе принято решение установить единственной ОС Ubuntu и
-                                        как следствие в работе с терминалом закреплен теоретический материал по основам
-                                        командной строки.
-                                        Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
-                                        Проект также помог разобраться с системой контроля версий, одним из главных
-                                        инструментов в арсенале любого разработчика.</p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="slider__item">
-                    <div class="inner__slider">
-                        <article class="portfolio">
-                            <h2 class="portfolio__title">Вычислитель отличий</h2>
-                            <div class="portfolio__grid">
-                                <div class="portfolio__video">
-                                    <video src="src/video/2022-01-20_19-14-11.mkv" poster="src/pic/puzzle.jpg"
-                                           controls="controls"></video>
-                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">«Вычислитель
-                                        отличий»</a> между двумя файлами в форматах json, yaml.
-                                    <p>
-                                        Это второй проект, реализованный при изучении профессии Javascript-разработчика
-                                        на hexlet.io
-                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
-                                </div>
-
-                                <div class="portfolio__content">
-                                    <p>В проекте реализована работа с деревьями - обход, преобразование, формирование
-                                        AST (абстрактного синтаксического дерева).
-                                        Проект написан в функциональном стиле. В процессе работы пришло понимание
-                                        форматов данных json, yaml, ini (структура, изучение синтаксического анализа в
-                                        js и обратно)</p>
-                                    <p>В результате создано полноценное приложение CLI с анализом входных параметров,
-                                        проверкой и созданием справки.</p>
+                                    <p>При работе с проектом были использованы следующие технологии: работа с
+                                        веб-сокетами, взаимодействие с REST API,
+                                        использование React (функциональные компоненты), Redux-toolkit, организация
+                                        роутинга на клиенте, авторизация и аутентификация, использование библиотек -
+                                        formik, yup, leo-profanity, react-i18next, react-toastify, мониторинг ошибок в продакшене (Rollbar) и, конечно
+                                        же, сборка (webpack)</p>
+                                    <p>Выполнен деплой приложения на <a href="https://milachat.herokuapp.com/chats/1"
+                                                                        target="_blank">heroku</a>, где можно
+                                        ознакомиться с функционалом</p>
                                 </div>
                             </div>
                         </article>
@@ -105,11 +69,14 @@
                                 <div class="portfolio__content">
                                     <p>Проект сфокусирован на работе с чистым DOM, отрабатывалась работа с
                                         селекторами, событиями и генерацией HTML средствами DOM API. Особое внимание
-                                        уделено формам. Приложение разрабатывалось на основе шаблона проектирования MVC и построено на промисах без
-                                        использования (исключительно в ученических целях) async/await. Для сборки применен Webpack5.
+                                        уделено формам. Приложение разрабатывалось на основе шаблона проектирования MVC
+                                        и построено на промисах без
+                                        использования (исключительно в ученических целях) async/await. Для сборки
+                                        применен Webpack5.
                                         Для организации текстов и перевода использована библиотека i18next.</p>
                                     <p>Выполнен деплой приложения на <a href="https://rss-aggregator-gamma.vercel.app/"
-                                                             target="_blank">versel</a>, где можно им воспользоваться</p>
+                                                                        target="_blank">versel</a>, где можно им
+                                        воспользоваться</p>
                                 </div>
                             </div>
                         </article>
@@ -162,37 +129,94 @@
                         </article>
                     </div>
                 </div>
+                <div class="slider__item">
+                    <div class="inner__slider">
+                        <article class="portfolio">
+                            <h2 class="portfolio__title">Вычислитель отличий</h2>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="src/video/2022-01-20_19-14-11.mkv" poster="src/pic/puzzle.jpg"
+                                           controls="controls"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">«Вычислитель
+                                        отличий»</a> между двумя файлами в форматах json, yaml.
+                                    <p>
+                                        Это второй проект, реализованный при изучении профессии Javascript-разработчика
+                                        на hexlet.io
+                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                </div>
+
+                                <div class="portfolio__content">
+                                    <p>В проекте реализована работа с деревьями - обход, преобразование, формирование
+                                        AST (абстрактного синтаксического дерева).
+                                        Проект написан в функциональном стиле. В процессе работы пришло понимание
+                                        форматов данных json, yaml, ini (структура, изучение синтаксического анализа в
+                                        js и обратно)</p>
+                                    <p>В результате создано полноценное приложение CLI с анализом входных параметров,
+                                        проверкой и созданием справки.</p>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="slider__item">
+                    <div class="inner__slider">
+                        <article class="portfolio">
+                            <h2 class="portfolio__title">Проект "Игры разума"</h2>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg"
+                                           controls="controls"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
+                                        разума» — набор из пяти консольных игр.</a> Каждая игра
+                                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                                    <p>
+                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
+                                        на hexlet.io
+                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                </div>
+
+                                <div class="portfolio__content">
+
+                                    <p>Работа над проектом началась с настройки среды окружения: установлен node.js,
+                                        прописаны зависимости в npm, для чтения пользовательского ввода подключена
+                                        сторонняя
+                                        библиотека readlineSync. Для удобства работы использован make. Для
+                                        автоматического отслеживания качества кода - настроен линтер (Eslint),
+                                        для непрерывной интеграции - подключены сервисы Github Actions и
+                                        CodeClimate.</p>
+                                    <p>В процессе принято решение установить единственной ОС Ubuntu и
+                                        как следствие в работе с терминалом закреплен теоретический материал по основам
+                                        командной строки.
+                                        Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
+                                        Проект также помог разобраться с системой контроля версий, одним из главных
+                                        инструментов в арсенале любого разработчика.</p>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <div class="main-list screen">
         <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект
-                "Игры разума"</a></h3>
-            <span class="item__link">+ набор из пяти консольных игр.</span>
-            <p class="item__description">Работа над проектом началась с настройки среды окружения: установлен node.js,
-                прописаны зависимости в npm, для чтения пользовательского ввода подключена
-                сторонняя библиотека readlineSync. Для удобства работы использован make. Для
-                автоматического отслеживания качества кода - настроен линтер (Eslint),
-                для непрерывной интеграции - подключены сервисы Github Actions и
-                CodeClimate.
-                В процессе принято решение установить единственной ОС Ubuntu и
-                как следствие в работе с терминалом закреплен теоретический материал по основам
-                командной строки.
-                Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
-                Проект также помог разобраться с системой контроля версий, одним из главных
-                инструментов в арсенале любого разработчика.</p>
-        </div>
-        <div class="list__item">
-            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank"> Проект
-                "Вычислитель отличий"</a></h3>
-            <span class="item__link"> + между двумя файлами в форматах json, yaml.</span>
-            <p class="item__description">В проекте реализована работа с деревьями - обход, преобразование, формирование
-                AST (абстрактного синтаксического дерева). Проект написан в функциональном стиле. В процессе работы
-                пришло
-                понимание форматов данных json, yaml, ini (структура, изучение синтаксического анализа в js и обратно) В
-                результате создано полноценное приложение CLI с анализом входных параметров, проверкой и созданием
-                справки.</p>
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-12" target="_blank">Chat</a>
+            </h3>
+            <span class="item__link">+ для коммуникации с возможностью создавать, переименовывать, удалять каналы, с
+                        подсказками и запретом ненормативной лексики.</span>
+            <p class="item__description">Это четвертый дипломный проект, реализованный при изучении профессии
+            Javascript-разработчика
+            на hexlet.io
+            <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a>
+           При работе с проектом были использованы следующие технологии: работа с
+                веб-сокетами, взаимодействие с REST API,
+                использование React (функциональные компоненты), Redux-toolkit, организация
+                роутинга на клиенте, авторизация и аутентификация, использование библиотек -
+                formik, yup, leo-profanity, react-i18next, react-toastify, мониторинг ошибок в продакшене (Rollbar) и, конечно
+                же, сборка (webpack)
+            Выполнен деплой приложения на <a href="https://milachat.herokuapp.com/chats/1"
+                                                target="_blank">heroku</a>, где можно
+                ознакомиться с функционалом</p>
         </div>
         <div class="list__item">
             <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl3" target="_blank">RSS-агрегатор</a>
@@ -202,8 +226,9 @@
                 селекторами, событиями и генерацией HTML средствами DOM API. Особое внимание уделено формам. Приложение
                 разрабатывалось на основе шаблона проектирования MVC и построено на промисах без использования
                 (исключительно в ученических целях) async/await. Для сборки применен Webpack5. Для организации текстов и
-                перевода использована библиотека i18next. Выполнен деплой приложения на <a href="https://rss-aggregator-gamma.vercel.app/"
-                                                                                           target="_blank">versel</a>, где можно им воспользоваться. </p>
+                перевода использована библиотека i18next. Выполнен деплой приложения на <a
+                        href="https://rss-aggregator-gamma.vercel.app/"
+                        target="_blank">versel</a>, где можно им воспользоваться. </p>
         </div>
         <div class="list__item">
             <h3 class="item__title"><a href="https://github.com/MilaNick/Webpack-template" target="_blank">
@@ -228,6 +253,34 @@
                 без хуков, затем оно будет переписано без использования классовых
                 компонентов. В приложении использован bootstrap.</p>
 
+        </div>
+        <div class="list__item">
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank"> Проект
+                "Вычислитель отличий"</a></h3>
+            <span class="item__link"> + между двумя файлами в форматах json, yaml.</span>
+            <p class="item__description">В проекте реализована работа с деревьями - обход, преобразование, формирование
+                AST (абстрактного синтаксического дерева). Проект написан в функциональном стиле. В процессе работы
+                пришло
+                понимание форматов данных json, yaml, ini (структура, изучение синтаксического анализа в js и обратно) В
+                результате создано полноценное приложение CLI с анализом входных параметров, проверкой и созданием
+                справки.</p>
+        </div>
+        <div class="list__item">
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект
+                "Игры разума"</a></h3>
+            <span class="item__link">+ набор из пяти консольных игр.</span>
+            <p class="item__description">Работа над проектом началась с настройки среды окружения: установлен node.js,
+                прописаны зависимости в npm, для чтения пользовательского ввода подключена
+                сторонняя библиотека readlineSync. Для удобства работы использован make. Для
+                автоматического отслеживания качества кода - настроен линтер (Eslint),
+                для непрерывной интеграции - подключены сервисы Github Actions и
+                CodeClimate.
+                В процессе принято решение установить единственной ОС Ubuntu и
+                как следствие в работе с терминалом закреплен теоретический материал по основам
+                командной строки.
+                Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
+                Проект также помог разобраться с системой контроля версий, одним из главных
+                инструментов в арсенале любого разработчика.</p>
         </div>
     </div>
 </div>
